# wasm-cpp-base

./: .clang-format  .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json
public/wasm/: main.js  main.wasm
src/: App.tsx  add.cpp  add.h  createElement.js  divide.cpp  divide.h  equals.js  index.css  index.html  index.js  main.cpp  multiply.cpp  operators.js  subtract.cpp  wasmMath.js  wasmMath.ts
src/components/: operatorSelector.tsx
src/wasmMath/: add.c  add.cpp  add.h  divide.c  divide.cpp  divide.h  main.c  main.cpp  multiply.c  multiply.cpp  multiply.h  subtract.cpp  subtract.h  subtract.hpp
